# tapiz

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .mcp.json  .prettierrc  AGENTS.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  INSTALL.md  MASTERPLAN.md  README.md  angular.json  buf.gen.yaml  buf.yaml  database-seed.sql  decorate-angular-cli.js  docker-compose.yaml  drizzle.config.ts  eslint.config.js  generate-config.sh  jest.preset.js  nginx.conf  nx.json  package-lock.json  package.json  pnpm-lock.yaml  run.sh  tsconfig.base.json
apps/realtime/: Cargo.toml  Dockerfile
apps/realtime/src/: main.rs
apps/realtime/src/auth/: mod.rs
apps/realtime/src/board_crdt/: mod.rs
apps/realtime/src/db/: mod.rs
apps/realtime/src/metrics/: mod.rs
apps/realtime/src/presence/: mod.rs
apps/realtime/src/rate_limit/: mod.rs
apps/realtime/src/viewport/: mod.rs
apps/realtime/src/ws/: mod.rs
apps/realtime/src/yjs/: mod.rs
docker/: docker-compose.yml
docs/: INSTALL.md  create-node.md  dev-guide.md  mcp.md  upgrade.md
drizzle/: 0000_lucky_excalibur.sql  0000_melted_wendigo.sql  0000_military_madame_hydra.sql  0000_motionless_nemesis.sql  0000_neat_vector.sql  0000_supreme_gideon.sql  0001_last_peter_parker.sql  0002_nosy_stardust.sql  0003_volatile_lethal_legion.sql  0004_public_thor.sql  0005_talented_young_avengers.sql  0006_sudden_james_howlett.sql  0007_fixed_korath.sql  0008_dashing_riptide.sql  0008_first_naoko.sql  0008_friendly_chimera.sql  0009_lonely_the_twelve.sql  0009_performance_indexes.sql  0010_bored_killmonger.sql
(+942 files in other folders)
