[package]
name = "tapiz-realtime"
version = "0.1.0"
edition = "2024"
description = "High-concurrency realtime backend for Tapiz whiteboard"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Yjs CRDT
yrs = "0.21"

# Domain-specific CRDT for ordered collections with z-order + LWW-Register
vectis-crdt = "0.1"

# R*-tree spatial index for viewport culling
rstar = { version = "0.12", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth — cookie-based session validation against Node.js API
cookie = "0.18"
reqwest = { version = "0.12", features = ["json", "cookies"] }

# HTTP types (needed for CORS HeaderValue)
http = "1"

# Concurrency primitives
dashmap = "6"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
